fix: rich text not showing on hover card block

--- a/src/blocks/HoverCards/index.module.scss
+++ b/src/blocks/HoverCards/index.module.scss
@@ -13,6 +13,10 @@ $curve: cubic-bezier(.165, .84, .44, 1);
   align-content: center;
   padding-bottom: var(--wrapper-padding-top);
 
+  .richText {
+    z-index: 10;
+  }
+
   @include mid-break {
     padding-bottom: calc(var(--base) * 2);
   }
@@ -175,7 +179,6 @@ $curve: cubic-bezier(.165, .84, .44, 1);
     background: url('/images/noise.png') repeat;
   }
 }
-
 
 .bg {
   height: 100%;
